fixed align on account payment

--- a/css/account.css
+++ b/css/account.css
@@ -1,6 +1,7 @@
 .pay{
     list-style: none;
     display:inline-block;
+    text-align: right;
 }
 .tabs-menu{
     display: block; 
